Deployments/ps-server/010-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ps-server
  labels:
    cert-manager-tls: nekomade-com
