Deployments/ps-server/060-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ps-server-ingress
  namespace: ps-server
spec:
  tls:
    - hosts:
        - ps.nekomade.com
      # cert-manager will create this secret (Referenced from the cert that was previously created)
      secretName: nekoamde-tls
  rules:
    - host: ps.nekomade.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ps-server-lb
                port:
                  number: 80
